# messis

./: .env.template  .gitattributes  .gitignore  .gitmodules  README.md  calculate_dataset_stats.ipynb  download_prithvi_100M.ipynb  download_satellite_data.ipynb  dvc.yaml  hf_inference.ipynb  messis-lightning.ipynb  messis-lightning.sh  model_training.ipynb  params.yaml  pyproject.toml  server-messis-lightning.sh  slurm-messis-lightning.sh
.dvc/: .gitignore  config
app/: Home.py  app.py  dashboard.py  inference.py  inference_dataloader.py  prepare_data.ipynb  streamlit.py
archive/: LNF_Katalog_Nutzungsart.csv  explore-mmseg-prithvi-crop-class-pipeline.ipynb  explore-prithvi-crop-class-model.ipynb  explore_multi_temporal_crop_classification_dataset.ipynb  explore_prithvi_multi_temporal_crop_classification_model.ipynb  explore_züri_crop.ipynb  label_hierarchy_mapping.csv  labels_hierarchy.csv  labels_hierarchy_seasonality.csv  labels_hierarchy_seasonality_fixed.csv  labels_hierarchy_seasonality_old.csv  labels_new_hierarchy.csv  merged_label_hierarchy_clean.csv  merged_label_hierarchy_clean_fixed.csv  merged_label_hierarchy_inner.csv  merged_label_hierarchy_left.csv  merged_label_hierarchy_outer.csv  messis-model-architecture-demo.ipynb  messis-model-mmlab-sample.ipynb
assets/: Introduction Model Overview.pptx  data_pipeline.drawio  messis_model_architecture.drawio
data/: .gitignore  TG_2019_Nutzungsflaechen_2019.gpkg.dvc  ZH_2019_LW_NUTZUNGSFLAECHEN_F.dbf.dvc  ZH_2019_LW_NUTZUNGSFLAECHEN_F.prj.dvc  ZH_2019_LW_NUTZUNGSFLAECHEN_F.shp.dvc  ZH_2019_LW_NUTZUNGSFLAECHEN_F.shx.dvc  georef-switzerland-kanton@public.geojson.dvc  labels_hierarchy.csv.dvc  labels_hierarchy_seasonality.csv.dvc  labels_hierarchy_seasonality_reduced.csv.dvc  labels_new_hierarchy.csv.dvc
messis/: README.md  dataloader.py  messis.py  prithvi.py
notebooks/: assets_for_poster.ipynb  compare_label_hierarchies.ipynb  compare_runtimes.ipynb  compare_split_strategy.ipynb  create_label_hierarchies.ipynb  create_report_longtables.ipynb  dataset_eda.ipynb  dataset_eda_hierarchy_seasonality.ipynb  dataset_eda_hierarchy_seasonality_reduced.ipynb  dataset_eda_hierarchy_zueri_crop.ipynb  dataset_eda_seasonality.ipynb  dataset_eda_seasonality_fixed.ipynb  dataset_eda_seasonality_old.ipynb  dataset_eda_seasonality_reduced.ipynb  eval.ipynb  experiment_evaluation.ipynb  label_hierarchy_eda.ipynb  (+4 more)
(+43 files in other folders)
