[tool.poetry]
name = "messis"
version = "0.1.0"
description = "Temporal Hierarchical Crop Classification Model based on Prithvi"
authors = ["Yvo Keller <hi@yvo.ai>", "Florin Barbisch <florin.barbisch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
huggingface-hub = "^0.23.0"
torch = "^2.3.0"
lightning = "^2.2.3"
torchvision = "^0.18.0"
torchviz = "^0.0.2"
ipykernel = "^6.29.4"
einops = "^0.7.0"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
timm = "^0.9.16"
openmim = "^0.3.9"
ipywidgets = "^8.1.2"
rasterio = "^1.3.10"
wandb = "^0.16.6"
papermill = "^2.6.0"
pyyaml = "^6.0.1"
dvc = "^3.50.1"
dvc-gdrive = "^3.0.1"
shapely = "^2.0.4"
tqdm = "^4.66.4"
geopandas = "^0.14.4"
torchmetrics = "^1.4.0"
nbconvert = "^7.16.4"
plotly = "^5.22.0"
python-dotenv = "^1.0.1"
safetensors = "^0.4.3"
transformers = "^4.41.2"
lion-pytorch = "^0.2.2"
torchview = "^0.2.6"
kaleido = "0.2.1"
latextable = "^1.0.1"
streamlit = "^1.37.0"
folium = "^0.17.0"
streamlit-folium = "^0.22.0"
dvc-ssh = "^4.1.1"
leafmap = "^0.36.6"
xarray = "^2024.7.0"
localtileserver = "^0.10.3"
streamlit-js-eval = "^0.1.7"
scipy = "^1.14.0"
mapclassify = "^2.8.0"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
